<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numView"
        android:layout_width="341dp"
        android:layout_height="355dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="150dp"
        android:gravity="center"
        android:text="@string/numcount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/blackbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/black"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:backgroundTint="@android:color/background_dark"
        app:layout_constraintTop_toBottomOf="@+id/numView" />

    <Button
        android:id="@+id/redbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/blackbutton"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/numView" />

    <Button
        android:id="@+id/bluebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/blue"
        app:layout_constraintStart_toEndOf="@+id/redbutton"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/numView" />

    <Button
        android:id="@+id/greenbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/green"
        app:layout_constraintStart_toEndOf="@+id/bluebutton"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/numView" />

    <Button
        android:id="@+id/countbutton"
        android:layout_width="338dp"
        android:layout_height="115dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/Count"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/redbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>